// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkWithTargetBlank renders as custom component 1`] = `
<Button
  href="//example.com"
  rel="noopener"
  target="_blank"
>
  button example
</Button>
`;

exports[`LinkWithTargetBlank renders with only href and children 1`] = `
<a
  href="//example.com"
  rel="noopener"
  target="_blank"
>
  example
</a>
`;

exports[`LinkWithTargetBlank renders with only href, children and extra props 1`] = `
<a
  className="test"
  href="//example.com"
  rel="noopener"
  target="_blank"
>
  example
</a>
`;
